Update package.json and .gitignore

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "roux-academy",
-  "version": "1.0.0",
-  "description": "Exercise files for my course Building a Website with Node.js and Express",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "Daniel Khan",
-  "license": "MIT",
-  "devDependencies": {},
-  "dependencies": {}
+	"name": "actor-meetup",
+	"version": "1.0.0",
+	"description": "Actor Meetup Fictional Web Application",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js"
+	},
+	"keywords": [],
+	"author": "Daniel Khan & M.S Manawadu",
+	"license": "MIT",
+	"devDependencies": {},
+	"dependencies": {}
 }
